--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -12,6 +12,9 @@
     <string name="get_picture_failed">获取图片失败</string>
     <string name="permission_denied">权限被拒绝！</string>
     <string name="active_engine">激活引擎</string>
+    <string name="stu_name">stu_name</string>
+    <string name="stu_no">stu_no</string>
+    <string name="stu_room">stu_room</string>
     <string name="active_success">激活引擎成功</string>
     <string name="already_activated">引擎已激活，无需再次激活</string>
     <string name="active_failed">引擎激活失败，错误码为 %d</string>
