--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">ArcFaceDemo</string>
+
     <string name="page_preview">face attributes detect(video)</string>
     <string name="face_recognize_mode">face compare 1:n(video vs database)</string>
     <string name="page_single_image">face attributes detect(image)</string>
@@ -31,9 +32,7 @@
     <string name="confirm_delete">delete those %d images and face features?</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
-    <string name="ft_op_0">only detect 0 degree in video mode</string>
-    <string name="ft_op_90">only detect 90 degree in video mode</string>
-    <string name="ft_op_180">only detect 180 degree in video mode</string>
-    <string name="ft_op_270">only detect 270 degree in video mode</string>
-    <string name="ft_op_all">detect all degrees in video mode</string>
+    <string name="stu_name">stu_name</string>
+    <string name="stu_no">stu_no</string>
+    <string name="stu_room">stu_room</string>
 </resources>
